# aiformula_common

./: .gitmodules  README.md
.github/: pull_request_template.md
aiformula_control/: CMakeLists.txt  README.md  package.xml
aiformula_description/: package.xml  setup.cfg  setup.py
aiformula_description/urdf/: ai_car.urdf
aiformula_detection/: README.md  package.xml  setup.cfg  setup.py
aiformula_detection/aiformula_detection/: bev_camera.py  bev_pointcloud.py
aiformula_interface/: package.xml  setup.cfg  setup.py
aiformula_interface/aiformula_interface/: g29_controller_if.py  roboteq_if.py
aiformula_interface/scripts/: can_bridge.sh
aiformula_interfaces/: package.xml  setup.cfg  setup.py
aiformula_msgs/: CMakeLists.txt  package.xml
aiformula_simulations/: package.xml  setup.cfg  setup.py
aiformula_simulations/launch/: robot_state_publisher.launch.py  shihou_world.launch.py
aiformula_simulations/models/: model.sdf
common/common_cpp/: CMakeLists.txt  package.xml
common/rviz_aiformula_plugins/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
common_python/: setup.py
common_python/common_python/: get_ros_parameter.py  launch_util.py  setup_util.py  util.py
control/: package.xml  setup.py
control/control/: g29_controller_if.py
control/handle_controller/: package.xml  setup.cfg  setup.py
control/motor_controller/: package.xml
control/roboteq_controller/: package.xml  setup.cfg  setup.py
docker/: aiformula_foxy_amd.dockerfile  docker_run_aiformula_foxy_amd.sh
documents/: system_architecture.drawio
launch/: CMakeLists.txt  package.xml
launchers/: CMakeLists.txt  README.md  package.xml
launchers/config/: frame_id_list.yaml  (+5 more)
perception/: package.xml  setup.py
remote_control/compressed_image_viewer/: CMakeLists.txt  README.md  package.xml
remote_control/compressed_image_viewer/config/: compressed_image_viewer.yaml
remote_control/compressed_image_viewer/include/compressed_image_viewer/: compressed_image_viewer.hpp  exception.hpp
remote_control/compressed_image_viewer/launch/: compressed_image_viewer.launch.py
remote_control/compressed_image_viewer/src/: compressed_image_viewer.cpp  compressed_image_viewer_node.cpp
rviz_aiformula_plugins/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
sample_vehicle/: setup.py
sensing/: package.xml  setup.cfg  setup.py
sensing/odometry_publisher/: CMakeLists.txt  README.md  package.xml
sensing/odometry_publisher/config/: odometry_publisher.yaml
sensing/odometry_publisher/include/: gyro_odometry.hpp  odometry.hpp  odometry_publisher.hpp  wheel.hpp  wheel_odometry.hpp
sensing/odometry_publisher/include/odometry_publisher/: gnss_odometry_publisher.hpp  gyro_odometry.hpp  gyro_odometry_publisher.hpp  odometry.hpp  odometry_publisher.hpp  wheel.hpp  wheel_odometry.hpp  wheel_odometry_publisher.hpp
sensing/odometry_publisher/launch/: both.launch.py  gnss_odometry_publisher.launch.py  gyro_odometry.launch.py  gyro_odometry_publisher.launch.py  odometry_publisher.launch.py  wheel_and_gyro_odometries.launch.py  wheel_and_gyro_odometry_publishers.launch.py  wheel_odometry.launch.py  wheel_odometry_publisher.launch.py
sensing/odometry_publisher/rviz/: gyro_odometry.rviz  odometry_publisher.rviz  wheel_and_gyro_odometries.rviz
sensing/odometry_publisher/src/: main.cpp  odometry.cpp  odometry_publisher.cpp
sensing/odometry_publisher/src/gnss_odometry_publisher/: gnss_odometry_publisher.cpp
sensing/odometry_publisher/src/gyro_odometry/: gyro_odometry.cpp  main.cpp
sensing/odometry_publisher/src/gyro_odometry_publisher/: gyro_odometry_publisher.cpp
sensing/odometry_publisher/src/wheel_odometry/: main.cpp  wheel_odometry.cpp
sensing/odometry_publisher/src/wheel_odometry_publisher/: wheel_odometry_publisher.cpp
simulator/: README.md  package.xml  setup.py
vehicle/: CMakeLists.txt  README.md  package.xml  setup.py
(+187 files in other folders)
